--- a/frontend/src/assets/css/static/reset.css
+++ b/frontend/src/assets/css/static/reset.css
@@ -10,7 +10,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+time, mark, audio, video, button{
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -40,4 +40,8 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+textarea:focus, button:focus, input:focus{
+	outline:none;
 }
