기능추가: vuex를 활용한 Toast형 검색바 추가
nav바에 종속된 tosat형태 검색바 추가
vuex를 통해서 클릭했을 때 필터값 할당
필터값에 따라 유동적으로 생성
클릭할 경우 검색 입력창이 해당 필터 라인으로 이동

--- a/frontend/src/assets/css/static/style.css
+++ b/frontend/src/assets/css/static/style.css
@@ -11,6 +11,12 @@
 /* ------------------------ */
 /* 공통 적용 활용 */
 /* ------------------------ */
+.toast_hide {
+  visibility: hidden;
+  opacity: 0;
+  transform: translateY(-20px);
+  z-index: -10;
+}
 .m-top {
   margin-top: 30px;
 }
