--- a/frontend/src/assets/css/static/style.css
+++ b/frontend/src/assets/css/static/style.css
@@ -11,6 +11,24 @@
 /* ------------------------ */
 /* 공통 적용 활용 */
 /* ------------------------ */
+
+/* 정사각형 */
+.square {
+  /* width는 적용 scope내에서 imoprtant로 조절 */
+  width: 50%;
+  position: relative;
+}
+.square:after {
+  content: '';
+  display: block;
+  padding-bottom: 100%;
+}
+.inner {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 .toast_hide {
   visibility: hidden;
   opacity: 0;
@@ -27,6 +45,14 @@
   width: 40px;
   height: 40px;
   border: none;
+}
+.line {
+  margin: 10px;
+  width: 100%;
+  height: 3px;
+  border-radius: 8px;
+  background-color: var(--basic-color-bg);
+  box-shadow: var(--basic-shadow-b);
 }
 /* button {
   border: var(--basic-color-key) 1px solid;
