기능추가: popular 컴포넌트 추가
반응형 지원
vuex는 미연동
swiper와 vue-toast 추가

--- a/frontend/src/assets/css/static/style.css
+++ b/frontend/src/assets/css/static/style.css
@@ -11,6 +11,15 @@
 /* ------------------------ */
 /* 공통 적용 활용 */
 /* ------------------------ */
+.none {
+  display: none;
+}
+.hidden {
+  visibility: hidden;
+}
+.clear {
+  opacity: 0;
+}
 
 /* 정사각형 */
 .square {
@@ -23,7 +32,7 @@
   display: block;
   padding-bottom: 100%;
 }
-.inner {
+.square-inner {
   position: absolute;
   width: 100%;
   height: 100%;
